2008-07-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* tests/test_gio.py:
	* gio/gfileattribute.override:
	* gio/gio.override:
	* gio/gio.defs:
	* gio/gfile.override:
	* gio/Makefile.am: Wrap new object gio.FileAttributeInfo,
	g_file_set_attribute and g_file_query_settable_attributes methods.


2008-07-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/unix-types.defs: Wrap gio.unix.DesktopAppInfo

	* gio/gappinfo.override:
	* gio/gio.override:
	* gio/gio.defs:
	* gio/gapplaunchcontext.override:
	* gio/Makefile.am: Wrap g_app_info_launch_uris,
	g_app_info_launch, g_app_launch_context_get_display and
	g_app_launch_context_get_startup_notify_id

	* gio/pygio-utils.c:
	* gio/pygio-utils.h: Add a couple of useful function to reduce the
	code in wrapped methods.

2008-07-29  Johan Dahlin  <johan@gnome.org>

	* examples/gio/downloader.py:
	* gio/giomodule.c (init_gio):
	Add gio.FILE_ATTRIBUTE_* constants and update the examples to use them.

2008-07-29  Johan Dahlin  <johan@gnome.org>

	* examples/gio/downloader.py:
	Add a new example

	* gio/ginputstream.override:
	Use a string internally instead of a PyStringObject when
	in read_async. Create a new python string in finish and
	honor the number of bytes read.

2008-07-28  Johan Dahlin  <johan@gnome.org>

	* glib/pyglib-python-compat.h:
	* gobject/pygobject-private.h:
	Move all compatibility into the same place, fixes build
	on python 2.4.

2008-07-27  Johan Dahlin  <johan@gnome.org>

	* glib/option.py:
	Remove tabs. Use sys.exc_info()[1] to fetch the exception value

	* gobject/__init__.py:
	* gobject/propertyhelper.py:
	Import gobject._gobject instead of just gobject.

	* gobject/Makefile.am:
	* gobject/constants.py.in:
	* gobject/generate-constants.c (main):
	Don't add long suffix if python >= 3.0

2008-07-27  Johan Dahlin  <johan@gnome.org>

	* glib/pyglib-python-compat.h:
	* gobject/gobjectmodule.c (pyg_object_new),
	(pyg__install_metaclass):
	* gobject/pygboxed.c (pyg_boxed_dealloc), (pyg_boxed_init),